fix footer not stuck to the bottom

--- a/styles/modules/layout/Layout.module.scss
+++ b/styles/modules/layout/Layout.module.scss
@@ -3,11 +3,14 @@
 .layout {
   min-height: 100vh;
   .main {
-    transition: all 0.5s ease;
+    transition: left 0.5s ease;
     position: fixed;
     width: 100%;
     max-height: 100vh;
     overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 
     left: 0;
   }
